// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extra-details-causes Renders \`extra-details-causes\` with full causes 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <transition-stub
      name="slide-y-reverse-transition"
    />
    <span>
      <i
        aria-hidden="true"
        class="v-icon c-extra-details__badge brown darken-1 white--text material-icons theme--light"
        style="font-size: 16px;"
      >
        center_focus_weak
      </i>
    </span>
  </span>
</div>
`;

exports[`extra-details-causes Renders \`extra-details-causes\` with full causes 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <div
    class="text-md-center"
  >
    <strong>
      Meta alarm
    </strong>
    <div
      class="layout row"
    >
      <div
        class="flex"
      >
        <div>
          Rules :
        </div>
      </div>
      <div
        class="flex"
      >
        <div>
           cause-rule-1-name
        </div>
        <div
          style="color: rgb(181, 181, 181);"
        >
           cause-rule-2-name
        </div>
        <div>
           cause-rule-3-name
        </div>
      </div>
    </div>
    <div>
      Causes : 3
    </div>
  </div>
</div>
`;

exports[`extra-details-causes Renders \`extra-details-causes\` without rules 1`] = `
<div>
  <span
    class="v-tooltip c-extra-details v-tooltip--top"
  >
    <transition-stub
      name="slide-y-reverse-transition"
    />
    <span>
      <i
        aria-hidden="true"
        class="v-icon c-extra-details__badge brown darken-1 white--text material-icons theme--light"
        style="font-size: 16px;"
      >
        center_focus_weak
      </i>
    </span>
  </span>
</div>
`;

exports[`extra-details-causes Renders \`extra-details-causes\` without rules 2`] = `
<div
  class="v-tooltip__content"
  style="left: 0px; max-width: auto; opacity: 0; top: 12px; z-index: 0; display: none;"
>
  <div
    class="text-md-center"
  >
    <strong>
      Meta alarm
    </strong>
    <div
      class="layout row"
    >
      <div
        class="flex"
      >
        <div>
          Rules :
        </div>
      </div>
      <div
        class="flex"
      />
    </div>
    <div>
      Causes : 3
    </div>
  </div>
</div>
`;
